<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>QEscalaForm</class>
 <widget class="QDialog" name="QEscalaForm">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>317</width>
    <height>242</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Selección de escala</string>
  </property>
  <widget class="QScrollBar" name="horizontalScrollBarMax">
   <property name="geometry">
    <rect>
     <x>30</x>
     <y>40</y>
     <width>160</width>
     <height>21</height>
    </rect>
   </property>
   <property name="maximum">
    <number>255</number>
   </property>
   <property name="value">
    <number>255</number>
   </property>
   <property name="orientation">
    <enum>Qt::Horizontal</enum>
   </property>
  </widget>
  <widget class="QScrollBar" name="horizontalScrollBarMin">
   <property name="geometry">
    <rect>
     <x>30</x>
     <y>130</y>
     <width>160</width>
     <height>21</height>
    </rect>
   </property>
   <property name="maximum">
    <number>255</number>
   </property>
   <property name="orientation">
    <enum>Qt::Horizontal</enum>
   </property>
  </widget>
  <widget class="QLabel" name="labelUM">
   <property name="geometry">
    <rect>
     <x>50</x>
     <y>10</y>
     <width>141</width>
     <height>18</height>
    </rect>
   </property>
   <property name="text">
    <string>Máximo nivel de gris</string>
   </property>
  </widget>
  <widget class="QLabel" name="labelUM_2">
   <property name="geometry">
    <rect>
     <x>40</x>
     <y>100</y>
     <width>151</width>
     <height>20</height>
    </rect>
   </property>
   <property name="text">
    <string>Mínimo nivel de gris</string>
   </property>
  </widget>
  <widget class="QLCDNumber" name="lcdNumberUM">
   <property name="geometry">
    <rect>
     <x>220</x>
     <y>40</y>
     <width>64</width>
     <height>23</height>
    </rect>
   </property>
   <property name="frameShape">
    <enum>QFrame::Panel</enum>
   </property>
   <property name="segmentStyle">
    <enum>QLCDNumber::Flat</enum>
   </property>
   <property name="intValue" stdset="0">
    <number>255</number>
   </property>
  </widget>
  <widget class="QLCDNumber" name="lcdNumberUm">
   <property name="geometry">
    <rect>
     <x>220</x>
     <y>130</y>
     <width>64</width>
     <height>23</height>
    </rect>
   </property>
   <property name="frameShape">
    <enum>QFrame::Panel</enum>
   </property>
   <property name="segmentStyle">
    <enum>QLCDNumber::Flat</enum>
   </property>
  </widget>
  <widget class="QPushButton" name="pushButtonAceptar">
   <property name="geometry">
    <rect>
     <x>50</x>
     <y>190</y>
     <width>91</width>
     <height>31</height>
    </rect>
   </property>
   <property name="text">
    <string>Aceptar</string>
   </property>
  </widget>
  <widget class="QPushButton" name="pushButtonCancelar">
   <property name="geometry">
    <rect>
     <x>160</x>
     <y>190</y>
     <width>91</width>
     <height>31</height>
    </rect>
   </property>
   <property name="text">
    <string>Cancelar</string>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>horizontalScrollBarMax</sender>
   <signal>valueChanged(int)</signal>
   <receiver>lcdNumberUM</receiver>
   <slot>display(int)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>109</x>
     <y>50</y>
    </hint>
    <hint type="destinationlabel">
     <x>251</x>
     <y>51</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>horizontalScrollBarMin</sender>
   <signal>valueChanged(int)</signal>
   <receiver>lcdNumberUm</receiver>
   <slot>display(int)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>109</x>
     <y>140</y>
    </hint>
    <hint type="destinationlabel">
     <x>251</x>
     <y>141</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
